test/mutation_analysis/s0551_student_attendance_record_i/hafis/starchat/mutants/2/result.txt
./test/mutation_analysis/s0551_student_attendance_record_i/hafis/starchat/mutants/2/Solution.java:17: error: unreachable statement
        while (false) {
                      ^
1 error
